edition = "2023";

package indexpb;

option go_package = "index/indexpb";

message Key {
  string group_id = 1;
  string space_id = 2;
}

message FileBindOperation {
  string file_id = 1;
  repeated string cids = 2;
}

message FileDeleteOperation {
  repeated string file_ids = 1;
}

message CidAddOperation {
  string file_id = 1;
  string cid = 2;
  uint64 data_size = 3;
}

// Operation encapsulates all possible index modification operations.
message Operation {
  oneof op {
    CidAddOperation cid_add = 1;
    FileBindOperation bind_file = 2;
    FileDeleteOperation delete_file = 3;
  }
}

// WALRecord represents a single write-ahead log record.
message WALRecord {
  int64 timestamp = 1;
  Key key = 2;
  repeated Operation ops = 3;
}
